--- a/focus/index.html
+++ b/focus/index.html
@@ -11,68 +11,49 @@
 <link rel="stylesheet" href="/css/layout.css" />
 <link rel="stylesheet" href="/css/components.css" />
 <link rel="stylesheet" href="/css/utilities.css" />
-<title>Santhosh Kumar Chandrashekar | Portfolio Architect</title>
-<meta name="description" content="Cloud and DevOps portfolio strategy, migration, and modernization." />
+<title>Focus | Santhosh Kumar</title>
+<meta name="description" content="Strategic focus areas and strengths." />
 </head>
 <body>
   <div data-include="partials/header.html"></div>
   <main id="main" class="container">
-  <section class="hero">
-    <img src="/assets/images/profile.webp" alt="Santhosh Kumar Chandrashekar" class="profile-pic" />
-    <div>
-      <h1>Santhosh Kumar Chandrashekar</h1>
-      <p class="subtitle">TOGAF® Certified Architect<br/>Cloud & DevOps Portfolio Strategy Leader</p>
-      <p>I help organisations modernize with confidence by shaping cloud, platform, and DevOps strategy that enables scale, resilience, and long-term business value.</p>
-      <p><strong><em>Architecture should provide clarity, direction, and enablement — not friction.</em></strong></p>
-    </div>
-  </section>
-
-  <section class="focus-grid" aria-labelledby="focusTitle">
-    <h2 id="focusTitle">Strategic Focus Areas</h2>
+  <header class="page-header">
+    <h1>Focus</h1>
+    <p class="subtitle">Core areas where I lead strategy and deliver outcomes.</p>
+  </header>
+  <section class="focus-grid">
     <div class="grid">
       <article class="card">
         <img src="/assets/images/focus-ea.webp" alt="Enterprise Architecture & Target-State Design" />
         <h3>Enterprise Architecture & Target-State Design</h3>
-        <p>Defining future-state architectures and guiding organisations toward scalable, secure digital foundations.</p>
+        <p>Operating models, target-state architecture, and decision guardrails to drive clarity at scale.</p>
       </article>
       <article class="card">
         <img src="/assets/images/focus-cloud-strategy.webp" alt="Cloud Strategy, Migration & Modernisation" />
         <h3>Cloud Strategy, Migration & Modernisation</h3>
-        <p>Shaping cloud adoption and modernising digital platforms for resilience, security, and scale.</p>
+        <p>Cloud adoption strategy, migration planning, modernization waves, and value realization.</p>
       </article>
       <article class="card">
         <img src="/assets/images/focus-landing-zones.webp" alt="Cloud Landing Zones & Platform Engineering" />
         <h3>Cloud Landing Zones & Platform Engineering</h3>
-        <p>Designing secure, compliant cloud platforms that accelerate delivery across portfolios.</p>
+        <p>Secure-by-default landing zones, platform blueprints, and paved paths for teams.</p>
       </article>
       <article class="card">
         <img src="/assets/images/focus-devsecops.webp" alt="DevSecOps & Delivery Enablement" />
         <h3>DevSecOps & Delivery Enablement</h3>
-        <p>Standardising pipelines and enabling teams through secure, automated delivery practices.</p>
+        <p>Pipeline standards, SDLC controls, automation, and developer experience improvements.</p>
       </article>
       <article class="card">
         <img src="/assets/images/focus-governance.webp" alt="Cloud Governance, Security & Compliance" />
         <h3>Cloud Governance, Security & Compliance</h3>
-        <p>Establishing guardrails, policy, and cost controls for responsible, sustainable cloud operations.</p>
+        <p>Policies, guardrails, cost governance, and security controls aligned to risk appetite.</p>
       </article>
       <article class="card">
         <img src="/assets/images/focus-roadmapping.webp" alt="Technology Roadmapping & Portfolio Advisory" />
         <h3>Technology Roadmapping & Portfolio Advisory</h3>
-        <p>Creating multi-year roadmaps that align platform strategy with business outcomes.</p>
+        <p>Multi-year roadmaps aligned to business outcomes, dependencies, and sequencing.</p>
       </article>
     </div>
-  </section>
-
-  <section class="case-grid-compact" aria-labelledby="homeInitTitle">
-    <h2 id="homeInitTitle">Featured Initiatives</h2>
-    <p class="section-note">A few selected initiatives. See more on the Initiatives page.</p>
-    <div class="grid" id="homeInitiatives"></div>
-  </section>
-
-  <section class="insights-grid" aria-labelledby="homeInsightsTitle">
-    <h2 id="homeInsightsTitle">Latest Insights</h2>
-    <p class="section-note">Recent articles. See more on the Insights page.</p>
-    <div class="grid" id="homeInsights"></div>
   </section>
 
   </main>
@@ -81,7 +62,6 @@
   <script src="/js/theme.js"></script>
   <script src="/js/menu.js"></script>
   <script src="/js/nav-active.js"></script>
-  <script src="/js/home.js"></script>
 
 </body>
 </html>
