--- a/index.html
+++ b/index.html
@@ -30,49 +30,25 @@
   <section class="focus-grid" aria-labelledby="focusTitle">
     <h2 id="focusTitle">Strategic Focus Areas</h2>
     <div class="grid">
-      <article class="card">
-        <img src="/assets/images/focus-ea.webp" alt="Enterprise Architecture & Target-State Design" />
-        <h3>Enterprise Architecture & Target-State Design</h3>
-        <p>Defining future-state architectures and guiding organisations toward scalable, secure digital foundations.</p>
-      </article>
-      <article class="card">
-        <img src="/assets/images/focus-cloud-strategy.webp" alt="Cloud Strategy, Migration & Modernisation" />
-        <h3>Cloud Strategy, Migration & Modernisation</h3>
-        <p>Shaping cloud adoption and modernising digital platforms for resilience, security, and scale.</p>
-      </article>
-      <article class="card">
-        <img src="/assets/images/focus-landing-zones.webp" alt="Cloud Landing Zones & Platform Engineering" />
-        <h3>Cloud Landing Zones & Platform Engineering</h3>
-        <p>Designing secure, compliant cloud platforms that accelerate delivery across portfolios.</p>
-      </article>
-      <article class="card">
-        <img src="/assets/images/focus-devsecops.webp" alt="DevSecOps & Delivery Enablement" />
-        <h3>DevSecOps & Delivery Enablement</h3>
-        <p>Standardising pipelines and enabling teams through secure, automated delivery practices.</p>
-      </article>
-      <article class="card">
-        <img src="/assets/images/focus-governance.webp" alt="Cloud Governance, Security & Compliance" />
-        <h3>Cloud Governance, Security & Compliance</h3>
-        <p>Establishing guardrails, policy, and cost controls for responsible, sustainable cloud operations.</p>
-      </article>
-      <article class="card">
-        <img src="/assets/images/focus-roadmapping.webp" alt="Technology Roadmapping & Portfolio Advisory" />
-        <h3>Technology Roadmapping & Portfolio Advisory</h3>
-        <p>Creating multi-year roadmaps that align platform strategy with business outcomes.</p>
-      </article>
+      <article class="card"><img src="/assets/images/focus-ea.webp" alt="Enterprise Architecture & Target-State Design" /><h3>Enterprise Architecture & Target-State Design</h3><p>Defining future-state architectures and guiding organisations toward scalable, secure digital foundations.</p></article>
+      <article class="card"><img src="/assets/images/focus-cloud-strategy.webp" alt="Cloud Strategy, Migration & Modernisation" /><h3>Cloud Strategy, Migration & Modernisation</h3><p>Shaping cloud adoption and modernising digital platforms for resilience, security, and scale.</p></article>
+      <article class="card"><img src="/assets/images/focus-landing-zones.webp" alt="Cloud Landing Zones & Platform Engineering" /><h3>Cloud Landing Zones & Platform Engineering</h3><p>Designing secure, compliant cloud platforms that accelerate delivery across portfolios.</p></article>
+      <article class="card"><img src="/assets/images/focus-devsecops.webp" alt="DevSecOps & Delivery Enablement" /><h3>DevSecOps & Delivery Enablement</h3><p>Standardising pipelines and enabling teams through secure, automated delivery practices.</p></article>
+      <article class="card"><img src="/assets/images/focus-governance.webp" alt="Cloud Governance, Security & Compliance" /><h3>Cloud Governance, Security & Compliance</h3><p>Establishing guardrails, policy, and cost controls for responsible, sustainable cloud operations.</p></article>
+      <article class="card"><img src="/assets/images/focus-roadmapping.webp" alt="Technology Roadmapping & Portfolio Advisory" /><h3>Technology Roadmapping & Portfolio Advisory</h3><p>Creating multi-year roadmaps that align platform strategy with business outcomes.</p></article>
     </div>
   </section>
 
   <section class="case-grid-compact" aria-labelledby="homeInitTitle">
     <h2 id="homeInitTitle">Featured Initiatives</h2>
-    <p class="section-note">A few selected initiatives. See more on the Initiatives page.</p>
-    <div class="grid" id="homeInitiatives"></div>
+    <p class="section-note">A few selected initiatives.</p>
+    <div class="grid" id="homeInitiatives"><p class="section-note">Loading initiatives…</p></div>
   </section>
 
   <section class="insights-grid" aria-labelledby="homeInsightsTitle">
     <h2 id="homeInsightsTitle">Latest Insights</h2>
-    <p class="section-note">Recent articles. See more on the Insights page.</p>
-    <div class="grid" id="homeInsights"></div>
+    <p class="section-note">Recent articles.</p>
+    <div class="grid" id="homeInsights"><p class="section-note">Loading insights…</p></div>
   </section>
 
   </main>
