--- a/initiatives/cloud-platform-strategy.html
+++ b/initiatives/cloud-platform-strategy.html
@@ -18,21 +18,15 @@
   <div data-include="partials/header.html"></div>
   <main id="main" class="container">
   <div class="case-page">
-    <a class="case-back" href="/initiatives/">← Back to Initiatives</a>
+    <a class="case-back" href="/initiatives/">← Back</a>
     <h1>Cloud Platform Strategy & Roadmap</h1>
     <p class="subtitle">Defined a multi-year platform roadmap aligning cloud foundations with portfolio outcomes.</p>
     <h2>Context</h2>
-    <p>Provide a short context: scope, constraints, stakeholders, and the problem to solve.</p>
+    <p>Add context for this initiatives.</p>
     <h2>Approach</h2>
-    <ul>
-      <li>Decision points and architecture principles applied.</li>
-      <li>Roadmap sequencing and dependencies.</li>
-      <li>Operating model / governance where relevant.</li>
-    </ul>
+    <ul><li>Key decisions</li><li>Architecture considerations</li><li>Execution approach</li></ul>
     <h2>Outcomes</h2>
-    <ul>
-      <li>Add measurable outcomes (lead time, reliability, cost, risk, adoption).</li>
-    </ul>
+    <ul><li>Add measurable outcomes</li></ul>
   </div>
   </main>
   <div data-include="partials/footer.html"></div>
