--- a/404.html
+++ b/404.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <meta name="theme-color" content="#0ea5e9" />
@@ -13,18 +12,15 @@
 <link rel="stylesheet" href="/css/utilities.css" />
 <title>404 | Page not found</title>
 <meta name="robots" content="noindex" />
-</head>
-<body>
-  <div data-include="partials/header.html"></div>
-  <main id="main" class="container">
-    <h1>Page not found</h1>
-    <p>The page you’re looking for doesn’t exist. Try going back to the home page.</p>
-    <p><a href="/">← Back to home</a></p>
-  </main>
-  <div data-include="partials/footer.html"></div>
-  <script src="/js/include.js"></script>
-  <script src="/js/theme.js"></script>
-  <script src="/js/menu.js"></script>
-  <script src="/js/nav-active.js"></script>
-</body>
-</html>
+</head><body>
+<div data-include="partials/header.html"></div>
+<main id="main" class="container">
+<header class="page-header"><h1>Page not found</h1><p class="subtitle">The page you’re looking for doesn’t exist.</p></header>
+<p><a href="/">← Back to home</a></p>
+</main>
+<div data-include="partials/footer.html"></div>
+<script src="/js/include.js"></script>
+<script src="/js/theme.js"></script>
+<script src="/js/menu.js"></script>
+<script src="/js/nav-active.js"></script>
+</body></html>
