--- a/insights/landing-zones-principles.html
+++ b/insights/landing-zones-principles.html
@@ -17,17 +17,16 @@
 <body>
   <div data-include="partials/header.html"></div>
   <main id="main" class="container">
-  <div class="blog-post">
-    <a class="case-back" href="/insights/">← Back to Insights</a>
+  <div class="case-page">
+    <a class="case-back" href="/insights/">← Back</a>
     <h1>Landing Zones: Design Principles</h1>
     <p class="subtitle">Key principles for scalable, secure cloud landing zones.</p>
-    <p><em>Write your article content here. Use headings, lists, and examples.</em></p>
-    <h2>Key points</h2>
-    <ul>
-      <li>Point 1</li>
-      <li>Point 2</li>
-      <li>Point 3</li>
-    </ul>
+    <h2>Context</h2>
+    <p>Add context for this insights.</p>
+    <h2>Approach</h2>
+    <ul><li>Key decisions</li><li>Architecture considerations</li><li>Execution approach</li></ul>
+    <h2>Outcomes</h2>
+    <ul><li>Add measurable outcomes</li></ul>
   </div>
   </main>
   <div data-include="partials/footer.html"></div>
