--- a/contact/index.html
+++ b/contact/index.html
@@ -21,12 +21,10 @@
     <h1>Contact</h1>
     <p class="subtitle">Ways to connect.</p>
   </header>
-
   <section>
     <p class="contact-cta">
       <a class="btn-linkedin" href="https://linkedin.com/in/sankum-chandra" target="_blank" rel="noopener noreferrer">
-        <img class="li-icon" src="/assets/images/in.webp" alt="" width="20" height="20" />
-        <span>Let’s Connect</span>
+        <span>LinkedIn</span>
       </a>
     </p>
     <p class="contact-email"><strong>Email:</strong> <a href="mailto:sankum.chandra@outlook.com">sankum.chandra@outlook.com</a></p>
